# ChangeLog for dev-lang/nemerle
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/nemerle/Attic/ChangeLog,v 1.14 2009/07/14 21:21:52 fauli Exp $

  14 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  -nemerle-0.2.1-r1.ebuild, -nemerle-0.2.1-r2.ebuild,
  -files/nemerle-0.2.1-ncc-fix.diff, -nemerle-0.3.1.ebuild,
  -files/nemerle-0.3.1-pathfix.diff, -nemerle-0.9.2.ebuild:
  clean up

  14 Jul 2009; Christian Faulhammer <fauli@gentoo.org> nemerle-0.9.3.ebuild:
  stable x86, bug 277862

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Peter Johanson (latexer, #206688) from metadata.xml.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*nemerle-0.9.3 (29 Oct 2006)

  29 Oct 2006; Peter Johanson <latexer@gentoo.org> +nemerle-0.9.3.ebuild:
  Bump to the latest release.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-nemerle-0.2.1-r1, files/digest-nemerle-0.2.1-r2,
  files/digest-nemerle-0.3.1, Manifest:
  Fixing SHA256 digest, pass four

  16 Apr 2006; Peter Johanson <latexer@gentoo.org> nemerle-0.9.2.ebuild:
  Force --libdir to work around autotools bug in nemerle. See bug #126508.

*nemerle-0.9.2 (16 Mar 2006)

  16 Mar 2006; Peter Johanson <latexer@gentoo.org> +nemerle-0.9.2.ebuild:
  Bump.

  24 May 2005; Peter Johanson <latexer@gentoo.org> nemerle-0.3.1.ebuild:
  Ugh. Never meant to bump straight to stable.

*nemerle-0.3.1 (08 May 2005)

  08 May 2005; Peter Johanson <latexer@gentoo.org>
  +files/nemerle-0.3.1-pathfix.diff, +nemerle-0.3.1.ebuild:
  Bump.

  14 Mar 2005; Peter Johanson <latexer@gentoo.org> nemerle-0.2.1-r1.ebuild,
  nemerle-0.2.1-r2.ebuild:
  Mark stable on x86.

  10 Mar 2005; Peter Johanson <latexer@gentoo.org> nemerle-0.2.1-r1.ebuild,
  nemerle-0.2.1-r2.ebuild:
  mono moved from dev-dotnet -> dev-lang

*nemerle-0.2.1-r2 (10 Mar 2005)
