@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/nemerle
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/nemerle/Attic/ChangeLog,v 1.14 2009/07/14 21:21:52 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/nemerle/Attic/ChangeLog,v 1.15 2009/07/14 21:28:48 fauli Exp $
+
+  14 Jul 2009; Christian Faulhammer <fauli@gentoo.org> nemerle-0.9.3.ebuild:
+  use emake instead of make, quote a variable, remove die comments and
+  assign RDEPEND explicitely
 
   14 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
   -nemerle-0.2.1-r1.ebuild, -nemerle-0.2.1-r2.ebuild,
